# codegraph-cpp

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  FINAL_REPORT.md  OPTIMIZATION.md
include/codegraph/context/: context_builder.h
include/codegraph/core/: lru_cache.h  types.h
include/codegraph/db/: database.h
include/codegraph/diff/: diff_parser.h
include/codegraph/extraction/: extractor.h
include/codegraph/graph/: traverser.h
include/codegraph/mcp/: mcp_server.h
include/codegraph/search/: fts_search.h
include/codegraph/sync/: file_watcher.h
scripts/: embed.py
src/: main.cpp
src/context/: context_builder.cpp
src/core/: types.cpp
src/db/: database.cpp
src/diff/: diff_parser.cpp
src/extraction/: cpp_extractor.cpp  extractor.cpp
src/graph/: traverser.cpp
src/mcp/: mcp_server.cpp
src/search/: fts_search.cpp
src/sync/: file_watcher.cpp
tests/: test_basic.cpp
